syntax = "proto3";

package notification;

option go_package = "github.com/LuisGerardoDC/Orbi/NotificationService/src/api/proto";

service NotificationService {
    rpc SendNotification(NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
    string message = 1;
}

message NotificationResponse {
    string status = 1;
}